--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color:bisque;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color:chocolate;
 }
 
 body {
@@ -43,6 +43,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
